--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,12 @@ build-iPhoneSimulator/
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
+
+
+.framgia-ci-reports/
+.framgia-ci-result.temp.yml
+
+
+/config/database.yml
+/config/credentials.yml.enc
+/config/master.key
