--- a/.gitignore
+++ b/.gitignore
@@ -62,4 +62,10 @@ build-iPhoneSimulator/
 
 /config/database.yml
 /config/credentials.yml.enc
+
 /config/master.key
+/node_modules
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
