--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,3 +2,14 @@ link:
   rails_home_link: "http://www.railstutorial.org/"
   rails_help_link: "http://www.railstutorial.org/help"
   rails_book_link: "http://www.railstutorial.org/book"
+
+validate:
+  email:
+    min_length: 10
+    max_length: 254
+    format: !ruby/regexp /\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z/i
+    case_sensitive: false
+  name:
+    max_length: 4
+  password:
+    min_length: 6
