--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,6 +2,7 @@ link:
   rails_home_link: "http://www.railstutorial.org/"
   rails_help_link: "http://www.railstutorial.org/help"
   rails_book_link: "http://www.railstutorial.org/book"
+  gravatar_link: "https://gravatar.com/emails"
 
 validate:
   email:
@@ -10,6 +11,10 @@ validate:
     format: !ruby/regexp /\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z/i
     case_sensitive: false
   name:
-    max_length: 4
+    max_length: 50
   password:
     min_length: 6
+
+gravatar:
+  default_size: 80
+  list_user_size: 50
