--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ config/settings/*.local.yml
 config/environments/*.local.yml
 
 test
+
+# Ignore application configuration
+/config/application.yml
