--- a/config/settings.yml
+++ b/config/settings.yml
@@ -14,6 +14,7 @@ validate:
     max_length: 50
   password:
     min_length: 6
+    reset_expried_time: 2
 gravatar:
   default_size: 80
   list_user_size: 50
